# dast_1

./: .gitignore  FW Kinematics with CLI.txt  README.md  plan_visualization_notes.txt  points.pcd  warehouse_notes.txt
Mechanics/ARM-1/: arm_1_body.stl  bearing_11_5_4.stl  servo_connector_3.stl
Mechanics/ARM-2/: arm_2_bearing_shaft.stl  arm_2_body.stl  joint_2_housing.stl  servo_mg996r.stl
Mechanics/ARM-3/: arm_3_body.stl  bearing_18_12_4.stl  joint_5_body.stl  joint_5_shaft.stl
Mechanics/BASE/: housing.stl  plate.stl  servo_connector_1.stl  servo_mg996r.stl  shaft.stl  shaft_hold.stl
Mechanics/GRIPPER/: body.stl  bolt_cap.stl  coupling.stl  finger_8.stl  motor_1.stl  motor_hold.stl  screw.stl  screw_head.stl
src/controller/: CMakeLists.txt  hw_controller.xml  package.xml
src/controller/config/: controller.yaml
src/controller/include/controller/: hw_interface.hpp
src/controller/launch/: controller.launch.py
src/controller/src/: hw_interface.cpp
src/description/: CMakeLists.txt  README.md  package.xml
src/description/launch/: display.launch.py  gazebo.launch.py
src/description/meshes/: arm_1.stl  arm_1_collision.stl  arm_2.stl  arm_2_collision.stl  arm_3.stl  arm_3_collision.stl  base.stl  base_collision.stl  gripper_3.stl  gripper_3_collision.stl  rotary.stl  rotary_collision.stl
src/description/rviz/: display.rviz
src/description/urdf/: control.xacro  description.urdf.xacro
src/micro/: CMakeLists.txt  package.xml
src/micro/micro/: serial_receiver.py  serial_transmitter.py
src/micro/nano33/hw_interface/: hw_interface.ino
src/micro/nano33/serial_servo/: serial_servo.ino
src/moveit/: CMakeLists.txt  package.xml  setup.py
src/moveit/config/: dast_1.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml
src/moveit/launch/: moveit.launch.py
src/moveit/moveit/: publish_pointcloud.py
src/moveit/src/: find_reachable_workspace.cpp  get_state.cpp  interface_angle.cpp  interface_pose.cpp
src/moveit/warehouse/: db.sqlite
src/msgs/: CMakeLists.txt  package.xml
src/startup/: CMakeLists.txt  package.xml
src/startup/launch/: run_robot.launch.py  sim_robot.launch.py
src/task/: CMakeLists.txt  package.xml
src/task/config/: tasks.yaml
src/task/launch/: task_interface.launch.py
src/task/src/: task_server_angle.cpp
system_mirroring/: install_ros2_packages.sh  installed_python_packages.txt  installed_ros2_packages.txt  system_mirroring.md
